# learn-python-prod

./: .pylintrc  Project-tools.md  README.md  pyproject.toml
my_courses/: changelog_example.py
my_courses/my_nested_package/: python_typing.py
pytest/test_folder/: test_01.py
tests/: test_01.py
