[tool.poetry]
name = "my-courses"
version = "0.1.0"
description = ""
authors = ["yanice <yanice.moreau@decathlon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = {version = "^24.4.2", allow-prereleases = true}
pylint = "^3.2.6"
isort = "^5.13.2"
mypy = "^1.11.0"
setuptools = "^71.1.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
